(fix) fixes overflow scrolling on active navigation on mobile

--- a/client/style.css
+++ b/client/style.css
@@ -506,6 +506,18 @@ body {
   text-rendering: optimizeLegibility;
 }
 
+/**
+ * html.is-hidden
+ * body.is-hidden
+ * 
+ */
+html.is-hidden,
+body.is-hidden {
+  overflow: hidden;
+  margin: 0;
+  height: 100%;
+}
+
 /* -----------------------------------------------------------------------------
 
   ELEMENTS - HEADINGS
